# fonts-arundina

./: COPYING  ChangeLog  Makefile.am  NEWS  README  configure.ac
arundina/: ArundinaSans-Bold.sfd  ArundinaSans-BoldOblique.sfd  ArundinaSans-Oblique.sfd  ArundinaSans.sfd  ArundinaSansMono-Bold.sfd  ArundinaSansMono-BoldOblique.sfd  ArundinaSansMono-Oblique.sfd  ArundinaSansMono.sfd  ArundinaSerif-Bold.sfd  ArundinaSerif.sfd  Makefile.am
branches/tlwg/: Makefile.am
branches/tlwg/arundina/: ArundinaSansMono-BoldOblique.sfd
branches/tlwg/debian/: ttf-thai-arundina.install  ttf-thai-arundina.links
debian/: changelog  control  copyright  latex-fonts-sipa-arundina.maps  rules  ttf-thai-arundina.defoma-hints  ttf-thai-arundina.preinst  watch
fontconfig/: 65-sipa-arundina.conf  Makefile.am
latex/: Makefile.am  README.latex  fonts-arundina.sty  ltharun.enc  ltharunmono.fd  ltharunsans.fd  ltharunserif.fd  texfont.mk.am  thai-dummy.afm  thailigs.enc
latex/examples/: Makefile.am  testdoc.tex  testsans.tex  testscaled-120.tex  testscaled-65.tex
scripts/: Makefile.am  gen-otf.py  gen-pfa.py  gen-pfb.py  gen.mk  gen.mk.in
tags/deb_0_1_1__3/arundina/: ArundinaSans-Oblique.sfd  ArundinaSansMono.sfd
tags/deb_0_1_1__3/debian/: changelog  control  copyright  rules  t1-thai-arundina.defoma-hints
tags/deb_0_1_1__4/: ChangeLog  configure.ac
tags/deb_0_1_1__4/arundina/: ArundinaSansMono-BoldOblique.sfd
tags/deb_0_1_1__4/debian/: changelog  control
tags/deb_0_1_1__5/: NEWS
tags/deb_0_1_1__5/arundina/: ArundinaSans-Bold.sfd  ArundinaSans.sfd  ArundinaSansMono-Bold.sfd
tags/deb_0_1_1__5/debian/: ttf-thai-arundina.preinst
tags/deb_0_1_2__1/: COPYING
tags/deb_0_1_2__1/debian/: control  t1-thai-arundina.install
tags/deb_0_1_3__1/: NEWS  README  configure.ac
tags/deb_0_1_3__1/arundina/: ArundinaSansMono-BoldOblique.sfd
tags/deb_0_1_3__1/debian/: changelog  control  fonts-sipa-arundina.links  latex-fonts-sipa-arundina.links  watch
tags/deb_0_1_3__1/scripts/: gen.mk.in
tags/r_0_1_1/: configure.ac
tags/r_0_1_1/arundina/: ArundinaSans-Bold.sfd  ArundinaSans-BoldOblique.sfd  ArundinaSans-Oblique.sfd  ArundinaSansMono-BoldOblique.sfd  ArundinaSansMono.sfd  ArundinaSerif-Bold.sfd
tags/r_0_1_2/: NEWS  configure.ac
tags/r_0_1_2/arundina/: ArundinaSans.sfd  ArundinaSansMono-Oblique.sfd  Makefile.am
tags/r_0_1_2/debian/: rules
tags/r_0_1_2/scripts/: gen.mk.in
tags/r_0_1_3/: AUTHORS
tags/r_0_1_3/arundina/: ArundinaSans-BoldOblique.sfd  ArundinaSans-Oblique.sfd
tags/r_0_1_3/debian/: changelog
tags/r_0_1_3/latex/: ltharunmono.fd
tags/r_0_2_0/: Makefile.am  NEWS
tags/r_0_2_0/arundina/: ArundinaSans-Bold.sfd  ArundinaSans-Oblique.sfd  ArundinaSansMono-Bold.sfd  ArundinaSansMono-Oblique.sfd  ArundinaSerif-Bold.sfd
tags/r_0_2_0/debian/: copyright
tags/r_0_2_0/latex/: ltharun.enc  ltharunserif.fd
tags/r_0_2_0/latex/examples/: testdoc.tex
tags/r_0_2_1/: ChangeLog  Makefile.am  README
tags/r_0_2_1/arundina/: ArundinaSans-Oblique.sfd  ArundinaSans.sfd  ArundinaSansMono-BoldOblique.sfd  ArundinaSansMono.sfd  ArundinaSerif.sfd  Makefile.am
tags/r_0_2_1/fontconfig/: Makefile.am
tags/r_0_2_1/latex/: Makefile.am  fonts-arundina.sty  ltharunmono.fd  ltharunsans.fd  ltharunserif.fd
tags/r_0_2_1/scripts/: Makefile.am
tags/start/arundina/: ArundinaSans.sfd  ArundinaSerif.sfd
tags/start/debian/: changelog  copyright
trunk/: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  configure.ac
trunk/arundina/: ArundinaSans-Bold.sfd  ArundinaSans-BoldOblique.sfd  ArundinaSans-Oblique.sfd  ArundinaSans.sfd  ArundinaSansMono-Bold.sfd  ArundinaSansMono-BoldOblique.sfd  ArundinaSansMono-Oblique.sfd  ArundinaSansMono.sfd  ArundinaSerif-Bold.sfd  ArundinaSerif.sfd  Makefile.am
trunk/debian/: changelog  copyright  fonts-sipa-arundina.install  latex-fonts-sipa-arundina.examples  rules  t1-thai-arundina.preinst  t1-thai-arundina.scale  watch
trunk/latex/: Makefile.am  fonts-arundina.sty  ltharunmono.fd  ltharunserif.fd  texfont.mk.am
trunk/latex/examples/: Makefile.am  testdoc.tex
trunk/scripts/: gen-pfb.pe  gen.mk
